# anchor-dice-roll-game

./: Anchor.toml  README.md
programs/anchor-dice-roll-game/: Cargo.toml
programs/anchor-dice-roll-game/src/: lib.rs
tests/: anchor-dice-roll-game.ts
